working on career/corporate page and form

--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,11 @@ footer{
 .menuRow{
 	padding-top: 10px;
 }
-
+ /*corporate*/
+ .img-thumbnail{
+ 	width: 200px;
+ 	height: 200px;
+ }
 
 /*Media Queries*/
 @media only screen and (max-width: 600px) {
