--- a/style/style.css
+++ b/style/style.css
@@ -72,9 +72,24 @@ footer{
 }
  /*corporate*/
  .img-thumbnail{
- 	width: 200px;
- 	height: 200px;
+ 	width: 300px;
+ 	height: 300px;
  }
+.accordion-item{
+	border: none;
+	background-color: black;
+	color: #AB8D3F;
+}
+.overlayThumb { 
+  position:absolute;
+  z-index:12;
+  top: 50vh;
+  width:100vh;
+  text-align:center;
+  padding: 100px;
+  background: rgba(0, 0, 0, 0.75);
+}
+
 
 /*Media Queries*/
 @media only screen and (max-width: 600px) {
